# healthyurl

./: README.md  healthyurl.py  pyproject.toml
.github/workflows/: pytest.yml  release.yml
tests/: test_healthchecker.py
