[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "healthyurl"
description = "A lightweight command-line tool for performing HTTP health checks using Python's standard library. Exits with code 1 on HTTP errors."
authors = [
    { name="Martín Gaitán", email="gaitan@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
dynamic = ['version']

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]

[project.urls]
Home = "https://github.com/mgaitan/healthyurl"

[project.scripts]
healthyurl = "healthyurl:main"
